Prevent zoom on form field input on iOS

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -17,10 +17,11 @@ input {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   margin-bottom: 2em;
-  font-size: 1.1em;
+  font-size: 16px; // prevent zoom on iOS
   padding: 0.33em 0;
   border: 0;
   border-bottom: 3px solid #aaa;
+  border-radius: 0;
 }
 
 input:focus {
